Move Back to Portfolio button inside navbarand fix logooverflow

--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,15 @@ html {
   color: #fff;
 }
 
+.menu-toggle span{
+     display: block;
+     width: 25px;
+     height: 3px;
+     margin: 5px 0;
+     background-color: #fff;
+     transition: 0.3s;
+   }
+
 .hero {
   display: flex;
   flex-wrap: wrap;
@@ -335,6 +344,12 @@ html {
   }
   .menu-toggle{
     display: block;
+  }
+
+
+   
+  .nav-links,.nav-icons,.back-portfolio-btn {
+    display: none;
   }
 
    .nav-links.open {
